# CAIPORAH-IA-

./: .gitignore  README.md  RELEASE_WINDOWS.md  package.json
.github/workflows/: build-windows.yml
backend/: pyproject.toml  requirements.txt
backend/src/: app.py  database.py  models.py  schemas.py
backend/src/engines/: conversation_engine.py  llm_engine.py  memory_engine.py  vision_engine.py  voice_engine.py
backend/src/plugins/: __init__.py  loader.py  plugin_base.py
backend/src/repositories/: conversation_repository.py  game_repository.py  history_repository.py  memory_repository.py
backend/src/routers/: __init__.py  auth.py  conversation.py  game.py  health.py  history.py  memory.py  plugins.py  vision.py  voice.py
backend/src/services/: conversation_service.py  game_service.py  history_service.py  memory_service.py  vision_service.py  voice_service.py
backend/src/utils/: auth.py
core/interfaces/: engine.py  plugin.py
database/: schema.sql
docs/api/: README.md
docs/architecture/: README.md
frontend/: electron-main.js  index.html  package-lock.json  package.json  preload.js
frontend/.github/workflows/: ci.yml
frontend/src/: App.tsx  api.ts  styles.css
installer/: README.md
plugins/game/: __init__.py  example_game_plugin.py
